2009-01-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Adjusted flags for Canon Powershots to match capture
	  abilities on the SDK page.
	* config.c: Do not list WiFi stuff on non-WiFi Nikons in config.
	* library.c: Added Nikon D200 property set.

2009-01-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Fixed stupid bug in "canon capture to card" mode.

	* ptp.c,ptp.h,config.c:  PTP Nikon AfDrive (Nikon DSLR). (not doing much)

	* ptp.c, config.c: Various additions of missing config values.

2009-01-15  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Enable viewfinder in enable capture for Powershots,
	  so we can just --set-config capture=1 --set-config output=0
	  or so.

	* library.c: Added Nikon D90 and its hidden properties.

2009-01-08  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added set_info_func, to set/reset Object Protection
	  flags. Added queries for it to get_info_func. (Used by digikam
	  already).
	* library.c: Added Canon Digital IXUS 960 IS, EOS 1000D, PowerShot
	  SX10 IS, Fuji FinePix A920, S2000HD.
	* library.c: Added Nikon D200 hidden properties.
	* config.c: Added more Nikon properties (almost of D70s properties
	  now added).

2008-12-22  Marcus Meissner  <marcus@jet.franken.de>

	* library.c,ptp.c,ptp.h: Added more Nikon properties.

2008-12-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Handle CR2 in Canon ObjectAdd events
	* ptp.c, config.c: More Nikon property handling

2008-12-14  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h: Found some Nikon property ids.

2008-11-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Got the data for the D700 and D300, included.
	  Changed nikon capture code to work with the D700 and other
	  newer Nikon DSLRs.

	* ptp.[ch]: Decode the Nikon DSLR current rotation flag.
	* ptp.h: Mark up the operation codes for Nikons.

2008-11-23  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Newer Nikon DSLRs "hide" the Nikon