@@ -236,205 +236,6 @@ translate_ptp_result (short result)
 	}
 }
 
-/* Observed on Nikon D80, just probing 0xd000 - 0xd1ff. See #if 0'ed code
- * below. -Marcus */
-const static uint16_t nikon_d80_extra_props[] = {
-0xd017, 0xd018, 0xd019, 0xd01a, 0xd01b, 0xd01c, 0xd01d, 0xd01e, 0xd01f,
-0xd025, 0xd026, 0xd02a, 0xd02b, 0xd02c, 0xd02d,
-0xd045, 0xd04f,
-0xd052, 0xd054, 0xd056, 0xd058, 0xd059, 0xd05e, 0xd05f,
-0xd062, 0xd063, 0xd064, 0xd06a, 0xd06b, 0xd06c, 0xd06f,
-0xd070, 0xd075, 0xd077, 0xd078, 0xd07a,
-0xd084, 0xd086, 0xd08a,
-0xd090, 0xd091, 0xd092,
-0xd0c0, 0xd0c1, 0xd0c2, 0xd0c3, 0xd0c4, 0xd0c5,
-0xd0e0, 0xd0e1, 0xd0e2, 0xd0e3, 0xd0e4, 0xd0e5, 0xd0e6,
-0xd100, 0xd101, 0xd102, 0xd103, 0xd104, 0xd105, 0xd106, 0xd108, 0xd109, 0xd10b, 0xd10d, 0xd10e,
-0xd120, 0xd121, 0xd122, 0xd124, 0xd125, 0xd126,
-0xd140, 0xd142, 0xd143, 0xd144, 0xd145, 0xd146,
-0xd160, 0xd161, 0xd163, 0xd164, 0xd165, 0xd166, 0xd167, 0xd169, 0xd16a, 0xd16b, 0xd16c, 0xd16d, 0xd16f,
-0xd181, 0xd182, 0xd183,
-0xd1b0, 0xd1b1,
-0xd1c0, 0xd1c1,
-0xd1d0, 0xd1d1, 0xd1d2, 0xd1d3, 0xd1d4, 0xd1d5, 0xd1d6, 0xd1d7, 0xd1d8, 0xd1d9, 0xd1da, 0xd1db, 0xd1dc
-};
-
-/* From Will Stephenson's D90, extracted by Marcus */
-const static uint16_t nikon_d90_extra_props[] = {
-0xd017, 0xd018, 0xd019, 0xd01a, 0xd01b, 0xd01c, 0xd01d, 0xd01e, 0xd01f,
-0xd020, 0xd021, 0xd022, 0xd023, 0xd024, 0xd025, 0xd026, 0xd027, 0xd028, 0xd029,
-0xd032,
-0xd045, 0xd04f,
-0xd050, 0xd052, 0xd054, 0xd056,
-0xd058, 0xd059, 0xd05a, 0xd05b, 0xd05c, 0xd05d, 0xd05e, 0xd05f,
-0xd062, 0xd063, 0xd065, 0xd068, 0xd06a, 0xd06b, 0xd06c, 0xd06f,
-0xd070, 0xd071, 0xd075, 0xd077, 0xd078, 0xd07a,
-0xd080, 0xd084, 0xd085, 0xd086, 0xd088, 0xd08a,
-0xd090, 0xd091, 0xd092,
-0xd0a0, 0xd0a1,
-0xd0c0, 0xd0c1, 0xd0c2, 0xd0c3, 0xd0c4, 0xd0c5,
-0xd0e0, 0xd0e1, 0xd0e2, 0xd0e3, 0xd0e4, 0xd0e5, 0xd0e6,
-0xd0f0, 0xd0f2, 0xd0f3, 0xd0f4, 0xd0f5,
-0xd100, 0xd101, 0xd102, 0xd103, 0xd104, 0xd105, 0xd106,
-0xd108, 0xd109, 0xd10b, 0xd10c, 0xd10d, 0xd10e,
-0xd114,
-0xd120, 0xd121, 0xd122, 0xd124, 0xd125, 0xd126,
-0xd14e, 0xd14f,
-0xd150, 0xd151, 0xd152, 0xd153, 0xd154, 0xd155,
-0xd160, 0xd161, 0xd163, 0xd164, 0xd166, 0xd167,
-0xd169, 0xd16a, 0xd16b, 0xd16c, 0xd16d, 0xd16f,
-0xd181, 0xd182, 0xd183, 0xd187, 0xd18d,
-0xd1a2, 0xd1a3, 0xd1a4,
-0xd1b0, 0xd1b1, 0xd1b2, 0xd1b3,
-0xd1c0, 0xd1c1,
-0xd1d0, 0xd1d1, 0xd1d2, 0xd1d3, 0xd1d4, 0xd1d5, 0xd1d6, 0xd1d7,
-0xd1d8, 0xd1d9, 0xd1da, 0xd1db, 0xd1dc,
-0xd200, 0xd201,
-};
-/* From Stefan Hundhammers D700, extracted by Marcus */
-const static uint16_t nikon_d700_extra_props[] = {
-0xd010, 0xd011, 0xd012, 0xd013, 0xd014, 0xd015, 0xd016, 0xd017,
-0xd018, 0xd019, 0xd01a, 0xd01b, 0xd01c, 0xd01d, 0xd01e, 0xd01f,
-0xd020, 0xd021, 0xd022, 0xd023, 0xd024, 0xd025, 0xd026, 0xd027,
-0xd028, 0xd029, 0xd02e, 0xd02f,
-0xd030, 0xd031, 0xd032, 0xd033,
-0xd040, 0xd041, 0xd042, 0xd043, 0xd044, 0xd045, 0xd048, 0xd049, 0xd04b, 0xd04f,
-0xd050, 0xd051, 0xd053, 0xd054, 0xd055, 0xd056, 0xd057,
-0xd058, 0xd059, 0xd05a, 0xd05b, 0xd05c, 0xd05e, 0xd05f,
-0xd062, 0xd063, 0xd065, 0xd067,
-0xd068, 0xd069, 0xd06a, 0xd06b, 0xd06c, 0xd06f,
-0xd070, 0xd071, 0xd072, 0xd073, 0xd074, 0xd075, 0xd077,
-0xd078, 0xd079, 0xd07a,
-0xd080, 0xd081, 0xd082, 0xd083, 0xd084, 0xd085, 0xd086, 0xd087,
-0xd088, 0xd089, 0xd08a, 0xd08b, 0xd08c, 0xd08d,
-0xd090, 0xd091, 0xd092, 0xd093, 0xd094, 0xd095, 0xd096, 0xd097,
-0xd098, 0xd099, 0xd09a, 0xd09b,
-0xd0c0, 0xd0c1, 0xd0c2, 0xd0c3, 0xd0c4, 0xd0c5,
-0xd0e0, 0xd0e1, 0xd0e2, 0xd0e3, 0xd0e4, 0xd0e5, 0xd0e6,
-0xd0f2, 0xd0f3, 0xd0f4, 0xd0f7,
-0xd100, 0xd101, 0xd102, 0xd103, 0xd104, 0xd105, 0xd106,
-0xd108, 0xd109, 0xd10b, 0xd10c, 0xd10d, 0xd10e,
-0xd110, 0xd111, 0xd112, 0xd113, 0xd114,
-0xd120, 0xd121, 0xd122, 0xd123, 0xd124, 0xd125, 0xd126,
-0xd149, 0xd14e, 0xd14f,
-0xd150, 0xd151, 0xd152, 0xd153, 0xd154, 0xd155,
-0xd160, 0xd163, 0xd164, 0xd166, 0xd167, 0xd16c, 0xd16d,
-0xd182, 0xd183, 0xd184, 0xd187, 0xd189, 0xd18a, 0xd18b, 0xd18d, 0xd18e,
-0xd1a0, 0xd1a1, 0xd1a2, 0xd1a3, 0xd1a4,
-0xd1b0, 0xd1b1, 0xd1b2, 0xd1b3,
-0xd1c0, 0xd1c1,
-0xd1d0, 0xd1d1, 0xd1d2, 0xd1d3, 0xd1d4, 0xd1d5, 0xd1d6, 0xd1d7,
-0xd1d8, 0xd1d9, 0xd1da, 0xd1db, 0xd1dc,
-0xd200, 0xd201
-};
-
-/* from Jana Jaegers D200, extracted by Marcus */
-const static uint16_t nikon_d200_extra_props[] = {
-0xd010, 0xd011, 0xd012, 0xd013, 0xd014, 0xd015, 0xd016, 0xd017,
-0xd018, 0xd019, 0xd01a, 0xd01b, 0xd01c, 0xd01d, 0xd01e, 0xd01f,
-0xd020, 0xd021, 0xd022, 0xd023, 0xd024, 0xd025, 0xd026, 0xd027,
-0xd028, 0xd029, 0xd02a, 0xd02b, 0xd02c, 0xd02d, 0xd02e, 0xd02f,
-0xd031, 0xd032,
-0xd040, 0xd041, 0xd042, 0xd043, 0xd044, 0xd045,
-0xd048, 0xd049, 0xd04a, 0xd04b, 0xd04f,
-0xd050, 0xd051, 0xd052, 0xd054, 0xd055, 0xd056, 0xd057,
-0xd058, 0xd059, 0xd05a, 0xd05b, 0xd05c, 0xd05e, 0xd05f,
-0xd062, 0xd063, 0xd064, 0xd068, 0xd06a, 0xd06b, 0xd06c, 0xd06f,
-0xd070, 0xd074, 0xd075, 0xd077, 0xd078, 0xd079, 0xd07a, 0xd07b,
-0xd080, 0xd081, 0xd082, 0xd083, 0xd084, 0xd085, 0xd086, 0xd087,
-0xd088, 0xd089, 0xd08a, 0xd08b,
-0xd090, 0xd091, 0xd092,
-0xd0c0, 0xd0c1, 0xd0c2, 0xd0c3, 0xd0c4, 0xd0c5,
-0xd0e0, 0xd0e1, 0xd0e2, 0xd0e3, 0xd0e4, 0xd0e5, 0xd0e6,
-0xd100, 0xd101, 0xd102, 0xd103, 0xd104, 0xd105, 0xd106,
-0xd108, 0xd109, 0xd10a, 0xd10b, 0xd10c, 0xd10d, 0xd10e, 0xd10f,
-0xd120, 0xd121, 0xd122, 0xd124, 0xd125, 0xd126,
-0xd140, 0xd142,
-0xd160, 0xd163, 0xd164, 0xd166, 0xd167, 0xd16c, 0xd16d,
-0xd181, 0xd182, 0xd183,
-0xd1c0, 0xd1c1,
-0xd1d0, 0xd1d1, 0xd1d2, 0xd1d3, 0xd1d4, 0xd1d5, 0xd1d6, 0xd1d7,
-0xd1d8, 0xd1d9, 0xd1da, 0xd1db, 0xd1dc
-};
-
-/* From Andreas Jaegers D300, extracted by Marcus. */
-const static uint16_t nikon_d300_extra_props[] = {
-0xd010, 0xd011, 0xd012, 0xd013, 0xd014, 0xd015, 0xd016, 0xd017,
-0xd018, 0xd019, 0xd01a, 0xd01b, 0xd01c, 0xd01d, 0xd01e, 0xd01f,
-0xd020, 0xd021, 0xd022, 0xd023, 0xd024, 0xd025, 0xd026, 0xd027,
-0xd028, 0xd029, 0xd02e, 0xd02f,
-0xd031, 0xd032,
-0xd040, 0xd041, 0xd042, 0xd043, 0xd044, 0xd045,
-0xd048, 0xd049, 0xd04b, 0xd04f,
-0xd050, 0xd051, 0xd053, 0xd054, 0xd055, 0xd056, 0xd057,
-0xd058, 0xd059, 0xd05a, 0xd05b, 0xd05c, 0xd05e, 0xd05f,
-0xd062, 0xd063, 0xd064,
-0xd068, 0xd069, 0xd06a, 0xd06b, 0xd06c, 0xd06f,
-0xd070, 0xd072, 0xd073, 0xd074, 0xd075, 0xd077,
-0xd078, 0xd079, 0xd07a,
-0xd080, 0xd081, 0xd082, 0xd083, 0xd084, 0xd085, 0xd086, 0xd087,
-0xd088, 0xd089, 0xd08a, 0xd08b, 0xd08c, 0xd08d,
-0xd090, 0xd091, 0xd092, 0xd093, 0xd094, 0xd095, 0xd096, 0xd097,
-0xd098, 0xd099, 0xd09a, 0xd09b,
-0xd0c0, 0xd0c1, 0xd0c2, 0xd0c3, 0xd0c4, 0xd0c5,
-0xd0e0, 0xd0e1, 0xd0e2, 0xd0e3, 0xd0e4, 0xd0e5, 0xd0e6,
-0xd100, 0xd101, 0xd102, 0xd103, 0xd104, 0xd105, 0xd106,
-0xd108, 0xd109, 0xd10b, 0xd10c, 0xd10d, 0xd10e,
-0xd110, 0xd111,
-0xd120, 0xd121, 0xd122, 0xd123, 0xd124, 0xd125, 0xd126,
-0xd149, 0xd14e, 0xd14f,
-0xd150, 0xd151, 0xd152, 0xd153, 0xd154, 0xd155,
-0xd160, 0xd163, 0xd164, 0xd166, 0xd167, 0xd16c, 0xd16d,
-0xd181, 0xd182, 0xd183, 0xd184, 0xd187, 0xd189, 0xd18a, 0xd18b, 0xd18d, 0xd18e,
-0xd1a0, 0xd1a1, 0xd1a2, 0xd1a3, 0xd1a4,
-0xd1b0, 0xd1b1, 0xd1b2, 0xd1b3,
-0xd1c0, 0xd1c1,
-0xd1d0, 0xd1d1, 0xd1d2, 0xd1d3, 0xd1d4, 0xd1d5, 0xd1d6, 0xd1d7,
-0xd1d8, 0xd1d9, 0xd1da, 0xd1db, 0xd1dc,
-0xd200, 0xd201
-};
-
-/* From Matthias Eckermanns D40x, extracted by Marcus. */
-const static uint16_t nikon_d40x_extra_props[] = {
-0xd017, 0xd018, 0xd019, 0xd01a, 0xd01b, 0xd01c, 0xd01d, 0xd01f,
-0xd025, 0xd026, 0xd02a, 0xd02b, 0xd02c, 0xd02d,
-0xd045,
-0xd054, 0xd05e, 0xd05f,
-0xd062, 0xd063, 0xd064, 0xd065, 0xd066, 0xd06b, 0xd06c,
-0xd084, 0xd08a,
-0xd090, 0xd091, 0xd092,
-0xd0e0, 0xd0e1, 0xd0e2, 0xd0e3, 0xd0e4, 0xd0e5, 0xd0e6,
-0xd100, 0xd101, 0xd102, 0xd103, 0xd104, 0xd105,
-0xd108, 0xd109, 0xd10b, 0xd10d, 0xd10e,
-0xd120, 0xd121, 0xd122, 0xd124, 0xd125, 0xd126,
-0xd140, 0xd142,
-0xd160, 0xd161, 0xd163, 0xd164, 0xd165, 0xd167,
-0xd16a, 0xd16b, 0xd16d,
-0xd183,
-0xd1b0, 0xd1b1, 0xd1b2,
-0xd1c0, 0xd1c1,
-0xd1e0, 0xd1e1
-};
-
-static const struct {
-	uint16_t	productid;
-	const uint16_t	*extraprops;
-	int		nrextraprops;
-} nikon_extra_props[] = {
-	/* D80 - confirmed by Marcus */
-	{ 0x412, nikon_d80_extra_props, sizeof(nikon_d80_extra_props)/sizeof(nikon_d80_extra_props[0]) },
-	/* D700 - confirmed by Marcus */
-	{ 0x422, nikon_d700_extra_props, sizeof(nikon_d700_extra_props)/sizeof(nikon_d700_extra_props[0]) },
-	/* D300 - confirmed by Marcus */
-	{ 0x41a, nikon_d300_extra_props, sizeof(nikon_d300_extra_props)/sizeof(nikon_d300_extra_props[0]) },
-	/* D90 - confirmed by Marcus */
-	{ 0x421, nikon_d90_extra_props, sizeof(nikon_d90_extra_props)/sizeof(nikon_d90_extra_props[0]) },
-	/* D200 - confirmed by Marcus */
-	{ 0x410, nikon_d200_extra_props, sizeof(nikon_d200_extra_props)/sizeof(nikon_d200_extra_props[0]) },
-	/* D40x - confirmed by Marcus */
-	{ 0x418, nikon_d40x_extra_props, sizeof(nikon_d40x_extra_props)/sizeof(nikon_d40x_extra_props[0]) }
-};
-
 void
 fixup_cached_deviceinfo (Camera *camera, PTPDeviceInfo *di) {
 	CameraAbilities a;
@@ -466,31 +267,24 @@ fixup_cached_deviceinfo (Camera *camera, PTPDeviceInfo *di) {
 		di->VendorExtensionID = PTP_VENDOR_NIKON;
 	}
 
-	if (	(di->VendorExtensionID == PTP_VENDOR_NIKON) &&
-		(camera->pl->bugs & PTP_NIKON_SUPPRESSED_PROPS)
-	) {
-		int i,j;
+	if (di->VendorExtensionID == PTP_VENDOR_NIKON) {
+		int i;
 
-		for (j=0;j<sizeof(nikon_extra_props)/sizeof(nikon_extra_props[0]);j++) {
-			if (nikon_extra_props[j].productid == a.usb_product)
-				break;
+		if (ptp_operation_issupported(&camera->pl->params, PTP_OC_NIKON_GetVendorPropCodes)) {
+			uint16_t  	*xprops;
+			unsigned int	xsize;
+			uint16_t	ret;
+
+			ret = ptp_nikon_get_vendorpropcodes (&camera->pl->params, &xprops, &xsize);
+			if (ret == PTP_RC_OK) {
+				di->DevicePropertiesSupported = realloc(di->DevicePropertiesSupported,sizeof(di->DevicePropertiesSupported[0])*(di->DevicePropertiesSupported_len + xsize));
+				for (i=0;i<xsize;i++)
+					di->DevicePropertiesSupported[i+di->DevicePropertiesSupported_len] = xprops[i];
+				di->DevicePropertiesSupported_len += xsize;
+			} else {
+				gp_log (GP_LOG_ERROR, "ptp2/fixup", "ptp_nikon_get_vendorpropcodes() failed with 0x%04x", ret);
+			}
 		}
-		if (j==sizeof(nikon_extra_props)/sizeof(nikon_extra_props[0]))
-			j=0; /* just use the first one as default */
-
-#if 1
-		di->DevicePropertiesSupported = realloc(di->DevicePropertiesSupported,sizeof(di->DevicePropertiesSupported[0])*(di->DevicePropertiesSupported_len + nikon_extra_props[j].nrextraprops));
-		for (i=0;i<nikon_extra_props[j].nrextraprops;i++)
-			di->DevicePropertiesSupported[i+di->DevicePropertiesSupported_len] = nikon_extra_props[j].extraprops[i];
-		di->DevicePropertiesSupported_len += nikon_extra_props[j].nrextraprops;
-#endif
-#if 0
-               /* hardcore hack ... just query d000 -> d1ff ...  */
-               di->DevicePropertiesSupported = realloc(di->DevicePropertiesSupported,sizeof(di->DevicePropertiesSupported[0])*(di->DevicePropertiesSupported_len + 2*256));
-               for (i=0;i<2*256;i++)
-                       di->DevicePropertiesSupported[i+di->DevicePropertiesSupported_len] = 0xD000 + i;
-               di->DevicePropertiesSupported_len += 2*256;
-#endif
 	}
 }
 
@@ -789,7 +583,7 @@ static struct {
 	{"Nikon:Coolpix L12 (PTP mode)",  0x04b0, 0x015f, 0},
 	/* Marius Groeger <marius.groeger@web.de> */
 	{"Nikon:Coolpix S200 (PTP mode)", 0x04b0, 0x0161, PTP_CAP|PTP_NIKON_BROKEN_CAP},
-  /* Submitted on IRC by kallepersson */
+	/* Submitted on IRC by kallepersson */
 	{"Nikon:Coolpix P5100 (PTP mode)", 0x04b0, 0x0163, 0},
 	/* https://sourceforge.net/tracker/index.php?func=detail&aid=2589245&group_id=8874&atid=108874 */
 	{"Nikon:Coolpix P50 (PTP mode)",  0x04b0, 0x0169, 0},
@@ -826,24 +620,24 @@ static struct {
 	{"Nikon:D50 (PTP mode)",          0x04b0, 0x040a, PTP_CAP}, /* no hidden props */
 	{"Nikon:DSC D70s (PTP mode)",     0x04b0, 0x040e, PTP_CAP},
 	/* Jana Jaeger <jjaeger.suse.de> */
-	{"Nikon:DSC D200 (PTP mode)",     0x04b0, 0x0410, PTP_CAP|PTP_NIKON_SUPPRESSED_PROPS},
+	{"Nikon:DSC D200 (PTP mode)",     0x04b0, 0x0410, PTP_CAP},
 	/* Christian Deckelmann @ SUSE */
-	{"Nikon:DSC D80 (PTP mode)",      0x04b0, 0x0412, PTP_CAP|PTP_NIKON_SUPPRESSED_PROPS},
+	{"Nikon:DSC D80 (PTP mode)",      0x04b0, 0x0412, PTP_CAP},
 	/* Huy Hoang <hoang027@umn.edu> */
-	{"Nikon:DSC D40 (PTP mode)",      0x04b0, 0x0414, PTP_CAP|PTP_NIKON_SUPPRESSED_PROPS},
+	{"Nikon:DSC D40 (PTP mode)",      0x04b0, 0x0414, PTP_CAP},
 	/* Luca Gervasi <luca.gervasi@gmail.com> */
-	{"Nikon:DSC D40x (PTP mode)",     0x04b0, 0x0418, PTP_CAP|PTP_NIKON_SUPPRESSED_PROPS},
+	{"Nikon:DSC D40x (PTP mode)",     0x04b0, 0x0418, PTP_CAP},
 	/* Andreas Jaeger <aj@suse.de>.
 	 * Marcus: MTP Proplist does not return objectsizes ... useless. */
-	{"Nikon:DSC D300 (PTP mode)",	  0x04b0, 0x041a, PTP_CAP|PTP_MTP|PTP_NIKON_SUPPRESSED_PROPS},
+	{"Nikon:DSC D300 (PTP mode)",	  0x04b0, 0x041a, PTP_CAP|PTP_MTP},
 	/* Pat Shanahan, http://sourceforge.net/tracker/index.php?func=detail&aid=1924511&group_id=8874&atid=358874 */
-	{"Nikon:D3 (PTP mode)",		  0x04b0, 0x041c, PTP_CAP|PTP_NIKON_SUPPRESSED_PROPS},
+	{"Nikon:D3 (PTP mode)",		  0x04b0, 0x041c, PTP_CAP},
 	/* irc reporter Benjamin Schindler */
-	{"Nikon:DSC D60 (PTP mode)",	  0x04b0, 0x041e, PTP_CAP|PTP_NIKON_SUPPRESSED_PROPS},
+	{"Nikon:DSC D60 (PTP mode)",	  0x04b0, 0x041e, PTP_CAP},
 	/* Will Stephenson at SUSE and wstephenson@flickr */
-	{"Nikon:DSC D90 (PTP mode)",	  0x04b0, 0x0421, PTP_CAP|PTP_NIKON_SUPPRESSED_PROPS},
+	{"Nikon:DSC D90 (PTP mode)",	  0x04b0, 0x0421, PTP_CAP},
 	/* Borrowed D700 by deckel / marcus */
-	{"Nikon:DSC D700 (PTP mode)",	  0x04b0, 0x0422, PTP_CAP|PTP_NIKON_SUPPRESSED_PROPS},
+	{"Nikon:DSC D700 (PTP mode)",	  0x04b0, 0x0422, PTP_CAP},
 
 #if 0
 	/* Thomas Luzat <thomas.luzat@gmx.net> */
@@ -1579,6 +1373,9 @@ camera_capture_preview (Camera *camera, CameraFile *file, GPContext *context)
 			gp_context_error (context, _("Nikon enable liveview failed: %x"), ret);
 			SET_CONTEXT_P(params, NULL);
 			//return GP_ERROR;
+		}
+		while (ptp_nikon_device_ready(params) != PTP_RC_OK) {
+			/* empty */
 		}
 
 		ret = ptp_nikon_get_preview_image (params, &xdata, &xsize, &xhandle);
