@@ -31,8 +31,7 @@
 #define PTP_MTP_PROPLIST_WORKS		(1<<6)
 #define PTP_NIKON_BROKEN_CAP		(1<<7)
 #define PTP_MTP_ZEN_BROKEN_HEADER	(1<<8)
-#define PTP_NIKON_SUPPRESSED_PROPS	(1<<9)
-#define PTP_NO_CAPTURE_COMPLETE		(1<<10)
+#define PTP_NO_CAPTURE_COMPLETE		(1<<9)
 
 #define DELETE_SENDS_EVENT(x) \
   ((x)->bugs & PTPBUG_DELETE_SENDS_EVENT)
