@@ -1,3 +1,8 @@
+2009-03-27  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c, ptp.c, ptp.h: use Nikon Get Vendor Extension Codes
+	  call instead of fixed lists. Removed static lists.
+
 2009-01-21  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Adjusted flags for Canon Powershots to match capture
